--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/TFD.TFDGameMode"
+GlobalDefaultGameMode=/Game/BluePrint/GameMode/BP_TFDGameMode.BP_TFDGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
